--- a/sound/requirements.txt
+++ b/sound/requirements.txt
@@ -10,6 +10,7 @@ contourpy==1.1.0
 cycler==0.11.0
 decorator==5.1.1
 executing==1.2.0
+fastdtw==0.3.4
 fonttools==4.41.0
 idna==3.4
 importlib-resources==6.0.0
