--- a/sound/requirements.txt
+++ b/sound/requirements.txt
@@ -47,6 +47,7 @@ seaborn==0.12.2
 six==1.16.0
 soundfile==0.12.1
 soxr==0.3.5
+SpeechRecognition==3.10.0
 stack-data==0.6.2
 threadpoolctl==3.2.0
 traitlets==5.9.0
